# ardent

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  flake.nix  lefthook.toml  mise.toml  package.json  pnpm-lock.yaml
.claude/: settings.json
.github/workflows/: ci.yml  docker.yml  release.yml
src/: canonical_casing.rs  canonical_includes.rs  canonical_parameters.rs  lib.rs  logger.rs  main.rs  parser.rs  printer.rs  rules.rs
tasks/: compare.ts
tests/: integration.rs
