[package]
name = "ardent"
version = "0.3.1"
description = "Opinionated formatter for NSIS scripts"
authors = ["Jan T. Sott"]
repository = "https://github.com/idleberg/ardent"
license = "MIT"
edition = "2024"

[lib]
name = "ardent"
path = "src/lib.rs"

[[bin]]
name = "ardent"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
glob = "0.3"
peg = "0.8"

[profile.release]
lto = true
strip = true
