[package]
name = "ardent"
version = "0.9.2"
description = "Opinionated formatter for NSIS scripts"
authors = ["Jan T. Sott"]
repository = "https://github.com/idleberg/ardent"
license = "MIT"
edition = "2024"
readme = "README.md"
documentation = "https://docs.rs/ardent"
homepage = "https://github.com/idleberg/ardent"
keywords = ["nsis", "formatter", "linter"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "ardent"
path = "src/lib.rs"

[[bin]]
name = "ardent"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
glob = "0.3"
peg = "0.8"

[profile.release]
lto = true
strip = true
